--- a/Projeto 2.ipynb
+++ b/Projeto 2.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
     "nota_docente_url = 'https://bit.ly/2IqonoW'\n",
     "\n",
     "#Componentes curriculares presenciais\n",
-    "disciplinas_url = 'http://bit.do/componentes_curriculares_ufrn'\n",
+    "disciplinas_url = 'https://bit.ly/2yIvZLs'\n",
     "\n",
     "#Turmas de 2015.1 até 2017.1\n",
     "turmas_2017_1_url = 'https://bit.ly/2wn1AFI'\n",
@@ -90,7 +90,7 @@
     "notas_2015_1_url = 'https://bit.ly/2I8YfeM'\n",
     "\n",
     "#Docentes da ufrn atualizado em 2018\n",
-    "docentes_url = 'http://bit.do/docentes_ufrn_2018'\n",
+    "docentes_url = 'https://bit.ly/2FSFJ8B'\n",
     "\n",
     "#Dataframe das turmas\n",
     "turmas_2017_1 = pd.read_csv(turmas_2017_1_url, sep=';')\n",
@@ -138,10 +138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -300,7 +298,7 @@
        "4  2015-08-26 11:48:34.146    CONSOLIDADA               Presencial  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,10 +341,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -449,7 +445,7 @@
        "4          8.9   APROVADO  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,10 +481,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -629,7 +623,7 @@
        "17              12.0                                    6T2345  2015        1  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,10 +654,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -785,7 +777,7 @@
        "4                60     35T56 (27/07/2015 - 19/12/2015)  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,10 +816,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -993,7 +983,7 @@
        "4                       8.55  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,6 +1005,285 @@
    "source": [
     "### Anexando porcentagem de aprovação por turma"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_turma</th>\n",
+       "      <th>discente</th>\n",
+       "      <th>descricao</th>\n",
+       "      <th>codigo</th>\n",
+       "      <th>nivel_ensino</th>\n",
+       "      <th>nome_docente</th>\n",
+       "      <th>codigo</th>\n",
+       "      <th>nivel_ensino</th>\n",
+       "      <th>nome_x</th>\n",
+       "      <th>capacidade_aluno</th>\n",
+       "      <th>descricao_horario</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1239422</td>\n",
+       "      <td>bcd9e4d861acc00fac216bbe953c63b8</td>\n",
+       "      <td>EXCLUIDA</td>\n",
+       "      <td>IMD0040</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>CARLOS EDUARDO DA SILVA</td>\n",
+       "      <td>IMD0040</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>LINGUAGEM DE PROGRAMAÇÃO II</td>\n",
+       "      <td>30</td>\n",
+       "      <td>24N12 (02/02/2015 - 20/06/2015)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1239422</td>\n",
+       "      <td>266360870439b157a5313fb03a907704</td>\n",
+       "      <td>EXCLUIDA</td>\n",
+       "      <td>IMD0040</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>CARLOS EDUARDO DA SILVA</td>\n",
+       "      <td>IMD0040</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>LINGUAGEM DE PROGRAMAÇÃO II</td>\n",
+       "      <td>30</td>\n",
+       "      <td>24N12 (02/02/2015 - 20/06/2015)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1239422</td>\n",
+       "      <td>3a3517f48b6be60b7f3a037b5903a1ce</td>\n",
+       "      <td>EXCLUIDA</td>\n",
+       "      <td>IMD0040</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>CARLOS EDUARDO DA SILVA</td>\n",
+       "      <td>IMD0040</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>LINGUAGEM DE PROGRAMAÇÃO II</td>\n",
+       "      <td>30</td>\n",
+       "      <td>24N12 (02/02/2015 - 20/06/2015)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1239422</td>\n",
+       "      <td>5dac5cab88de4928bbc3095150f768ff</td>\n",
+       "      <td>EXCLUIDA</td>\n",
+       "      <td>IMD0040</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>CARLOS EDUARDO DA SILVA</td>\n",
+       "      <td>IMD0040</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>LINGUAGEM DE PROGRAMAÇÃO II</td>\n",
+       "      <td>30</td>\n",
+       "      <td>24N12 (02/02/2015 - 20/06/2015)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1239422</td>\n",
+       "      <td>71ded068ae396ef3bb21c15219c4906b</td>\n",
+       "      <td>CANCELADO</td>\n",
+       "      <td>IMD0040</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>CARLOS EDUARDO DA SILVA</td>\n",
+       "      <td>IMD0040</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>LINGUAGEM DE PROGRAMAÇÃO II</td>\n",
+       "      <td>30</td>\n",
+       "      <td>24N12 (02/02/2015 - 20/06/2015)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_turma                          discente  descricao   codigo  \\\n",
+       "0   1239422  bcd9e4d861acc00fac216bbe953c63b8   EXCLUIDA  IMD0040   \n",
+       "1   1239422  266360870439b157a5313fb03a907704   EXCLUIDA  IMD0040   \n",
+       "5   1239422  3a3517f48b6be60b7f3a037b5903a1ce   EXCLUIDA  IMD0040   \n",
+       "6   1239422  5dac5cab88de4928bbc3095150f768ff   EXCLUIDA  IMD0040   \n",
+       "7   1239422  71ded068ae396ef3bb21c15219c4906b  CANCELADO  IMD0040   \n",
+       "\n",
+       "  nivel_ensino             nome_docente   codigo nivel_ensino  \\\n",
+       "0    GRADUAÇÃO  CARLOS EDUARDO DA SILVA  IMD0040    GRADUAÇÃO   \n",
+       "1    GRADUAÇÃO  CARLOS EDUARDO DA SILVA  IMD0040    GRADUAÇÃO   \n",
+       "5    GRADUAÇÃO  CARLOS EDUARDO DA SILVA  IMD0040    GRADUAÇÃO   \n",
+       "6    GRADUAÇÃO  CARLOS EDUARDO DA SILVA  IMD0040    GRADUAÇÃO   \n",
+       "7    GRADUAÇÃO  CARLOS EDUARDO DA SILVA  IMD0040    GRADUAÇÃO   \n",
+       "\n",
+       "                        nome_x  capacidade_aluno  \\\n",
+       "0  LINGUAGEM DE PROGRAMAÇÃO II                30   \n",
+       "1  LINGUAGEM DE PROGRAMAÇÃO II                30   \n",
+       "5  LINGUAGEM DE PROGRAMAÇÃO II                30   \n",
+       "6  LINGUAGEM DE PROGRAMAÇÃO II                30   \n",
+       "7  LINGUAGEM DE PROGRAMAÇÃO II                30   \n",
+       "\n",
+       "                 descricao_horario  \n",
+       "0  24N12 (02/02/2015 - 20/06/2015)  \n",
+       "1  24N12 (02/02/2015 - 20/06/2015)  \n",
+       "5  24N12 (02/02/2015 - 20/06/2015)  \n",
+       "6  24N12 (02/02/2015 - 20/06/2015)  \n",
+       "7  24N12 (02/02/2015 - 20/06/2015)  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filtrar apenas as turmas do IMD\n",
+    "notas_imd = notas_total[notas_total.id_turma.isin(turmas_nomesprof.id_turma)]\n",
+    "\n",
+    "# merge entre os dataframes notas_imd e turmas_imd_nomesprof utilizando como referencia id_turma\n",
+    "notas_imd_merge = pd.merge(notas_imd, turmas_nomesprof, on='id_turma')\n",
+    "\n",
+    "# removendo discentes duplicados (notas unidades 1, 2, 3)\n",
+    "notas_imd_merge.drop_duplicates(subset=['id_turma', 'discente', 'id_curso'], keep='first', inplace=True)\n",
+    "notas_imd_merge.dropna(axis=1, inplace=True)\n",
+    "notas_imd_merge.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_componente</th>\n",
+       "      <th>codigo</th>\n",
+       "      <th>nivel</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>unidade_responsavel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18643</td>\n",
+       "      <td>MUT508</td>\n",
+       "      <td>T</td>\n",
+       "      <td>COMPOSIÇÃO EM MÚSICA POPULAR III</td>\n",
+       "      <td>ESCOLA DE MÚSICA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18644</td>\n",
+       "      <td>MUT516</td>\n",
+       "      <td>T</td>\n",
+       "      <td>CO-REPETIÇÃO</td>\n",
+       "      <td>ESCOLA DE MÚSICA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18645</td>\n",
+       "      <td>MUT520</td>\n",
+       "      <td>T</td>\n",
+       "      <td>CONTRABAIXO ACÚSTICO I</td>\n",
+       "      <td>ESCOLA DE MÚSICA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18646</td>\n",
+       "      <td>MUT165</td>\n",
+       "      <td>T</td>\n",
+       "      <td>PIANO COMPLEMENTAR I</td>\n",
+       "      <td>ESCOLA DE MÚSICA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18647</td>\n",
+       "      <td>MUT167</td>\n",
+       "      <td>T</td>\n",
+       "      <td>PIANO COMPLEMENTAR III</td>\n",
+       "      <td>ESCOLA DE MÚSICA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  id_componente  codigo nivel                              nome  \\\n",
+       "0         18643  MUT508     T  COMPOSIÇÃO EM MÚSICA POPULAR III   \n",
+       "1         18644  MUT516     T                      CO-REPETIÇÃO   \n",
+       "2         18645  MUT520     T            CONTRABAIXO ACÚSTICO I   \n",
+       "3         18646  MUT165     T              PIANO COMPLEMENTAR I   \n",
+       "4         18647  MUT167     T            PIANO COMPLEMENTAR III   \n",
+       "\n",
+       "  unidade_responsavel  \n",
+       "0    ESCOLA DE MÚSICA  \n",
+       "1    ESCOLA DE MÚSICA  \n",
+       "2    ESCOLA DE MÚSICA  \n",
+       "3    ESCOLA DE MÚSICA  \n",
+       "4    ESCOLA DE MÚSICA  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "disciplinas.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
